# pythonprac

./: .gitignore  README.md  check_all.py  checkerNN.py  repo_urls  run_results  update_local_tests.py  url_planter.py
20210916/1/: URLS  prog.py
20210916/2/: has_an_error.py  main.py
20210916/3/: URLS  gentest.py  prog.py
20210923/1/: URLS  prog.py
20210923/2/: URLS  prog.py
20210923/3/: URLS  prog.py
20210930/1/: URLS  prog.py
20210930/2/: URLS  prog.py
20210930/3/: URLS  prog.py
20211007/1/: URLS  prog.py
20211007/2/: URLS  prog.py
20211007/3/: URLS  prog.py
20211007/4/: URLS  prog.py
20211014/1/: URLS  prog.py
20211014/2/: URLS  prog.py
20211014/3/: URLS  prog.py
20211021/1/: URLS  prog.py
20211021/2/: URLS  prog.py
20211021/3/: URLS  prog.py
20211028/1/: URLS  prog.py
20211028/2/: URLS  prog.py
20211028/3/: URLS  prog.py
20211111/1/: URLS  prog.py
20211111/2/: URLS  prog.py
20211118/1/: URLS  prog.py
20211118/2/: URLS  prog.py
20211118/3/: URLS  prog.py
20211125/1/: URLS  prog.py
20211125/2/: URLS  prog.py
20211125/3/: URLS  prog.py
20211202/1/: URLS  prog.py
20211202/2/: URLS  prog.py
20211213/1/: URLS  prog.py
20220214/1/: gitdir.py
20220221/1/: anna.txt  fipsedixit.py  ipsedixit.py
20220221/2/: jabber.txt
20220228/1/: prog.py
20220305/: prog.py
20220305/1/: prog.py
20220305/2/: antip.py  spiral2.py
20220314/1/: opilki.txt
20220425/1/: Pipfile  dodo.py  prog.py  pyproject.toml  setup.cfg
20220425/1/po/ru/LC_MESSAGES/: messages.po
20220425/1/tests/: test_prog.py
(+133 files in other folders)
