[metadata]
name = prog
version = 0.0.1
url = https://www.github.com/ipsavitsky/pythonprac
author = Ilya Savitsky
author_email = ipsavitsky234@gmail.com
description = test package
long_description = file: README.rst
project_urls =
    Bug Tracker = https://www.github.com/ipsavitsky/pythonprac/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = prog
include_package_data = True
install_requires =
   pyfiglet==0.8.post1

[options.entry_points]
console_scripts =
    prog = prog

[options.package_data]
prog = */*/DateTime.mo